--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 	 					Project Two
 	 				</h2>
 	 				<p class="text-muted">
-	 					Done by Sourav chhetri
+	 					Done by Amit
 	 				</p>
 	 			</div>
 	 			<div class="col-lg-3 col-sm-6 mt-4">
@@ -150,8 +150,7 @@
 	 					Project Three
 	 				</h2>
 	 				<p class="text-muted">
-	 					Done by Sourav chhetri
-	 				</p>
+	 					Done by Raj	 				</p>
 	 			</div>
 	 		<div class="col-lg-3  col-sm-6 mt-5">
 	 				<img src="5.png " class="img-thumbnail">
